--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         </div>
       </div>
   <div class="morebtn">
-    <a href="/experience/index.html" class="btn"><span>View All</span>
+    <a href="/experience" class="btn"><span>View All</span>
       <i class="fas fa-arrow-right"></i>
   </a>
   </div>
